--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>load-more-plugin 插件实例</title>
+    <title>load-more-plugin 分页加载组件demo</title>
   </head>
   <body>
     <div id="app"></div>
